# rust-jvm

./: .dockerignore  .gitignore  3  Cargo.toml  Dockerfile  LICENSE  README.md  dev-env  diff1  diff2  global todos  rust-jvm.sublime-project  rust-jvm.sublime-workspace  x86_64-gdb-record.json
another-jit-vm/: Cargo.toml
another-jit-vm-ir/: Cargo.toml
another-jit-vm-ir/src/: changeable_const.rs  common.rs  compiler.rs  ir_stack.rs  lib.rs  skipable_exits.rs  skippable_exits.rs  tests.rs  vm_exit_abi.rs
another-jit-vm-ir/src/ir_to_native/: bit_manipulation.rs  branch.rs  call.rs  float_arithmetic.rs  float_compare.rs  float_double_const.rs  float_double_convert.rs  instance_of.rs  integer_arithmetic.rs  integer_compare.rs  load_store.rs  mod.rs  native_call.rs  special.rs
another-jit-vm-ir/src/vm_exit_abi/: mod.rs  register_structs.rs  runtime_input.rs
another-jit-vm/src/: code_modification.rs  intrinsic_helpers.rs  lib.rs  saved_registers_utils.rs  stack.rs
classfile-parser/: Cargo.toml
classfile-parser/src/: attribute_infos.rs  code.rs  constant_infos.rs  lib.rs  parse_validation.rs  parsing_util.rs  types.rs
classfile-parser/src/classfile/: attribute_infos.rs  constant_infos.rs  mod.rs  parsing_util.rs
classfile-parser/tests/: tests.rs
classfile-view/: Cargo.toml
classfile-view/src/: lib.rs  loading.rs  vtype.rs
classfile-view/src/view/: attribute_view.rs  constant_info_view.rs  descriptor_parser.rs  field_view.rs  mod.rs  (+3 more)
gc-memory-layout-common/: Cargo.toml
gc-memory-layout-common/src/: allocated_object_types.rs  early_startup.rs  frame_layout.rs  layout.rs  lib.rs  memory_regions.rs  test.rs
interface-vtable/: Cargo.toml
interface-vtable/src/: lib.rs  lookup_cache.rs
jar-manipulation/: Cargo.toml
jar-manipulation/src/: lib.rs
jar-manipulation/test/: rt_jar_tests.rs
jar-manipulation/tests/: rt_jar_tests.rs
java-lang-invoke-method-handle-natives/: Cargo.toml
java-lang-invoke-method-handle-natives/src/: get_members.rs  init.rs  lib.rs  offsets.rs  resolve.rs
jit/: Cargo.toml
jit-ir/: Cargo.toml
jit-ir/src/: lib.rs
jit/src/: arrays.rs  compiled_methods.rs  integer_arithmetic.rs  lib.rs  native.rs
jit2/: Cargo.toml
jit2/src/: ir.rs  lib.rs  state.rs
jmm-interface/: Cargo.toml
jmm-interface/src/: lib.rs
jvmti/: Cargo.toml
jvmti-jni-bindings/: Cargo.toml  build.rs  jvm_md.h  wrapper.h
jvmti-jni-bindings/src/: invoke_interface.rs  jmm_interface.rs  jni_interface.rs  jvmti_interface.rs  lib.rs
jvmti/src/: capabilities.rs  lib.rs
libjvm/: Cargo.toml  build.rs  wrapper.h
libjvm-utils/: Cargo.toml
libjvm-utils/src/: lib.rs
libjvm/src/: access_control.rs  arrays.rs  assertion.rs  clone.rs  compiler.rs  define_class.rs  dtrace.rs  ensure_deps_used.rs  find_class.rs  gc.rs  get_resource.rs  hashcode.rs  intern.rs  introspection.rs  io.rs  java_lang_invoke_MethodHandleNatives.rs  java_sun_misc_unsafe.rs  jio.rs  jvm_management.rs  lib.rs  library.rs  loading.rs  memory.rs  monitor.rs  packages.rs  properties.rs  raw_monitor.rs  real_main.rs  reflection.rs  resolve_class.rs  signals.rs  socket.rs  stacktrace.rs  sun_reflect_reflection.rs  thread.rs  time.rs  trace.rs  util.rs
loading/: Cargo.toml
loading/src/: lib.rs
method-table/: Cargo.toml
method-table/src/: interface_table.rs  lib.rs
remote-frame-push/: Cargo.toml
remote-frame-push/src/: lib.rs
runtime-class-stuff/: Cargo.toml
runtime-class-stuff/src/: accessor.rs  array_layout.rs  field_numbers.rs  hidden_fields.rs  layout.rs  lib.rs  method_numbers.rs  object_layout.rs  static_fields.rs  test.rs
runtime-common/: Cargo.toml
runtime-common/src/: java_values.rs  lib.rs  runtime_class.rs
rust-jni/: Cargo.toml  build.rs
rust-jni/src/: lib.rs  mangling.rs  value_conversion.rs
rust-jvm-common/: Cargo.toml
rust-jvm-common/src/: classfile.rs  classnames.rs  compressed_classfile.rs  cpdtype_table.rs  descriptor_parser.rs  global_consts.rs  lib.rs  loading.rs  method_shape.rs  mhn_consts.rs  opaque_id_table.rs  ptype.rs  runtime_type.rs  string_pool.rs  test_utils.rs  unified_types.rs  utils.rs  vtype.rs
slow-interpreter/: Cargo.toml  build.rs  signals-wrapper.h  stdarg-wrapper.h
slow-interpreter/src/: accessor_ext.rs  better_java_stack.rs  branch_instructions.rs  class_loading.rs  class_objects.rs  cpdtype_table.rs  define_class_safe.rs  double_instructions.rs  dup_instructions.rs  exceptions.rs  extra_intrinsics.rs  fast_instance_of_checkcast.rs  field_table.rs  float_instructions.rs  function_call_targets_updating.rs  function_instruction_count.rs  gc_memory_layout_common.rs  hidden_field_constants.rs  inheritance_method_ids.rs  inheritance_vtable.rs  instance_of_common.rs  integer_instructions.rs  interpreter.rs  interpreter_state.rs  interpreter_util.rs  ir_to_java_layer.rs  java_values.rs  jmm.rs  jvm_state.rs  known_type_to_address_mappings.rs  layout_cache.rs  leaked_interface_arrays.rs  lib.rs  loading.rs  method_table.rs  monitor.rs  native_allocation.rs  native_tracing.rs  new_java_values.rs  new_safe_point_state.rs  (+17 more)
slow-interpreter/tests/: fake_vm_tests.rs
stage0/: Cargo.toml
stage0-editable/: Cargo.toml
stage0-editable/src/: lib.rs
stage0/src/: allocate.rs  arithmetic.rs  array_load.rs  array_store.rs  arrays.rs  bitmanip.rs  branching.rs  consts.rs  dup.rs  fields.rs  float_arithmetic.rs  float_convert.rs  instance_of_and_casting.rs  int_convert.rs  invoke.rs  ldc.rs  lib.rs  local_var_loads.rs  local_var_stores.rs  monitors.rs  returns.rs  static_fields.rs  throw.rs
stage1/: Cargo.toml
stage1/src/: frame_layout.rs  ir_compiler_common.rs  lib.rs  native_compiler_common.rs  registers_state.rs
sun-misc-unsafe/: Cargo.toml
sun-misc-unsafe/src/: compare_and_swap.rs  define_anonymous_class.rs  define_class.rs  double_register_addressing.rs  fences.rs  initializing.rs  lib.rs  object_access.rs  object_access_normal.rs  object_access_offsets.rs  object_access_volatile.rs  park.rs  raw_pointer.rs  reflection.rs
thread-signal-handler/: Cargo.toml
thread-signal-handler/src/: lib.rs  remote_queries.rs  signal_safety.rs
(+875 files in other folders)
