[package]
name = "rust-jvm"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

[[bin]]
name = "java"
path = "src/main.rs"

[dependencies]
jvm = { path = "./libjvm" }
libloading = { git = 'https://github.com/pirocks/rust_libloading.git' }
anyhow = "1"

[profile.release]
debug = true
incremental = true

[workspace]
members = [
    "rust-jvm-common",
    "classfile-parser",
    "verification",
    "slow-interpreter",
    "jar-manipulation",
    "libjvm",
    "classfile-view",
    "jvmti-jni-bindings",
    "threads",
    "type-safe-proc-macro-utils",
    "sketch-jvm-version-of-utf8",
    "add-only-static-vec",
    "method-table",
    "another-jit-vm",
    "classfile-writer",
    "another-jit-vm-ir",
    "gc-memory-layout-common",
    "perf-metrics",
    "java5-verifier",
    "runtime-class-stuff",
    "vtable",
    "interface-vtable",
    "stage0",
    "inheritance-tree",
    "native-vec",
    "jvm-args",
    "xtask",
    "thread-signal-handler",
    "pressure-stall-information-parser",
    "meminfo-parser",
    "memory-limited-executor"
]
