[package]
name = "another-jit-vm-ir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
another-jit-vm = { path = "../another-jit-vm" }
rust-jvm-common = { path = "../rust-jvm-common" }
#gc-memory-layout-common = { path = "../gc-memory-layout-common" }
sketch-jvm-version-of-utf8 = { path = "../sketch-jvm-version-of-utf8" }
add-only-static-vec = { path = "../add-only-static-vec" }
bimap = "0.6"
libc = "0.2"
num-derive = "0.3"
num-traits = "0.2"
itertools = "0.10"

[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]