[package]
name = "another-jit-vm-ir"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
another-jit-vm = { path = "../another-jit-vm" }
rust-jvm-common = { path = "../rust-jvm-common" }
sketch-jvm-version-of-utf8 = { path = "../sketch-jvm-version-of-utf8" }
add-only-static-vec = { path = "../add-only-static-vec" }
runtime-class-stuff = { path = "../runtime-class-stuff" }
gc-memory-layout-common = { path = "../gc-memory-layout-common" }
vtable = { path = "../vtable" }
libc = "0.2"
num-derive = "0.3"
num-traits = "0.2"
itertools = "0.10"

[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]