[package]
name = "another-jit-vm"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.6"
rangemap = "1"
nix = "0.23"
libc = "0.2"
bimap = "0.6"

[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]