[package]
name = "another-jit-vm"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = { git = "https://github.com/Gilnaa/memoffset.git", branch = "gilad-4-stable-const" }
rangemap = "1"
nix = { git = "https://github.com/pirocks/nix.git", branch = "master" }
libc = "0.2"
nonnull-const = { git = "https://github.com/pirocks/better-nonnull.git", branch = "master" }

[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]