[package]
name = "classfile-parser"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
test = true


[dependencies]
log = "0.4"
simple_logger = "1.3.0"
ntest_timeout = "0.3.0"
timebomb = "0.1.2"
rust-jvm-common = {path = "../rust-jvm-common"}
#classfile-view = {path = "../classfile-view"}
descriptor-parser = {path = "../descriptor-parser"}