[package]
name = "classfile-parser"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
test = true


[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
sketch-jvm-version-of-utf8 = { path = "../sketch-jvm-version-of-utf8" }
num-traits = "0.2"
num-derive = "0.3"
wtf8 = "0.1"