[package]
name = "gc-memory-layout-common"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.93"
itertools = "0.10.0"
iced-x86 = "1.11.1"
verification = { path = "../verification" }
classfile-view = { path = "../classfile-view" }
rust-jvm-common = { path = "../rust-jvm-common" }
jvmti-jni-bindings = { path = "../jvmti-jni-bindings" }