[package]
name = "gc-memory-layout-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
jvmti-jni-bindings = { path = "../jvmti-jni-bindings" }
verification = { path = "../verification" }
runtime-class-stuff = { path = "../runtime-class-stuff" }
another-jit-vm = { path = "../another-jit-vm" }
vtable = { path = "../vtable" }

nix = "0.23"
libc = "0.2"
itertools = "0.10"
num-integer = "0.1"
static_assertions = "1"
memoffset = "0.6"

[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]

[dev-dependencies]
rusty-fork = "0.3"