[package]
name = "interface-vtable"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
another-jit-vm = { path = "../another-jit-vm" }
runtime-class-stuff = { path = "../runtime-class-stuff" }
method-table = { path = "../method-table" }
memoffset = "0.6"
itertools = "0.10"
by_address = "1"

[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]