[package]
name = "jar-manipulation"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
zip = "0.5"
classfile-parser = { path = "../classfile-parser" }

[dev-dependencies]
ntest_timeout = "0.3.0"
timebomb = "0.1.2"