[package]
name = "jar-manipulation"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
zip = { version = "0.6", features = ["zstd", "time", "bzip2", "deflate"], default-features = false }
classfile-parser = { path = "../classfile-parser" }

[dev-dependencies]
