[package]
name = "jit-ir"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = "1.11.1"
gc-memory-layout-common = { path = "../gc-memory-layout-common" }
memoffset = "0.6"
jit-common = { path = "../jit-common" }
rangemap = "0.1.10"
libc = "0.2.98"
bimap = "0.6.1"