[package]
name = "jit2"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
jit-common = { path = "../jit-common" }
itertools = "0.10.1"
add-only-static-vec = { path = "../add-only-static-vec" }
gc-memory-layout-common = { path = "../gc-memory-layout-common" }

[dependencies.iced-x86]
version = "1.14.0"
features = ["code_asm"]