[package]
name = "jvmti-jni-bindings"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]


[dependencies]
[build-dependencies]
bindgen = "0.66.1"
xtask = { path = "../xtask" }
anyhow = "1"