[package]
name = "jvmti"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies]
rust-jvm-common = {path = "../rust-jvm-common"}
classfile-parser = {path = "../classfile-parser"}
verification = {path = "../verification"}
slow-interpreter = {path = "../slow-interpreter"}
jar-manipulation = {path = "../jar-manipulation"}
jni-bindings = {path = "../jni-bindings"}
jvm = {path = "../libjvm"}
classfile-view = {path = "../classfile-view"}
descriptor-parser = {path = "../descriptor-parser"}
jvmti-bindings = {path = "../jvmti-bindings"}