[package]
name = "libjvm-utils"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
runtime-common = {path = "../runtime-common"}
rust-jvm-common = {path = "../rust-jvm-common"}
slow-interpreter = {path = "../slow-interpreter"}
jni-bindings = {path = "../jni-bindings"}
classfile-parser = {path = "../classfile-parser"}
classfile-view = {path = "../classfile-view"}
utils = {path = "../utils"}
#descriptor-parser = {path = "../descriptor-parser"}