[package]
#this exists to access libjava dependencies.
name = "jvm"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
slow-interpreter = { path = "../slow-interpreter" }
jvmti-jni-bindings = { path = "../jvmti-jni-bindings" }
jmm-bindings = { path = "../jmm-bindings" }
classfile-parser = { path = "../classfile-parser" }
classfile-view = { path = "../classfile-view" }
verification = { path = "../verification" }
sketch-jvm-version-of-utf8 = { path = "../sketch-jvm-version-of-utf8" }
lazy_static = "1.4"
heapsize = "0.4"
libc = "0.2"
num_cpus = "1"
regex = "1"
lock_api = "0.4"
parking_lot = "0.12"
nix = "0.23"
by_address = "1"
crossbeam = { git = "https://github.com/pirocks/crossbeam.git" }
itertools = "0.10"
wtf8 = "0.1"