[package]
#this exists to access libjava dependencies.
name = "jvm"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
slow-interpreter = { path = "../slow-interpreter" }
jvmti-jni-bindings = { path = "../jvmti-jni-bindings" }
classfile-parser = { path = "../classfile-parser" }
classfile-view = { path = "../classfile-view" }
verification = { path = "../verification" }
sketch-jvm-version-of-utf8 = { path = "../sketch-jvm-version-of-utf8" }
runtime-class-stuff = { path = "../runtime-class-stuff" }
gc-memory-layout-common = { path = "../gc-memory-layout-common" }
another-jit-vm-ir = { path = "../another-jit-vm-ir" }
#jvm-args = { path = "../jvm-args" }

lazy_static = "1.4"
libc = "0.2"
num_cpus = "1"
regex = "1"
lock_api = "0.4"
parking_lot = "0.12"
nix = { git = "https://github.com/pirocks/nix.git", branch = "master" }
by_address = "1"
itertools = "0.10"
wtf8 = "0.1"
argparse = "0.2"
raw-cpuid = "10.3.0"