[package]
name = "loading"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"



[dependencies]
rust-jvm-common = {path = "../rust-jvm-common"}
verification = {path = "../verification"}
classfile-parser = {path = "../classfile-parser"}
classfile-view =  {path = "../classfile-view"}
jar-manipulation = {path = "../jar-manipulation"}
log = "0.4"
simple_logger = "1.3.0"