[package]
name = "method-table"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
by_address = "1"
jvmti-jni-bindings = { path = "../jvmti-jni-bindings" }
rust-jvm-common = { path = "../rust-jvm-common" }
runtime-class-stuff = { path = "../runtime-class-stuff" }