[package]
name = "remote-frame-push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { git = "https://github.com/pirocks/nix.git", branch = "master" }
nonnull-const = { git = "https://github.com/pirocks/better-nonnull.git", branch = "master" }
memoffset = { git = "https://github.com/Gilnaa/memoffset.git", branch = "gilad-4-stable-const" }
another-jit-vm = { path = "../another-jit-vm"}
assert_no_alloc = "1.1.2"
