[package]
name = "runtime-common"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
log = "0.4"
simple_logger = "1.3.0"
rust-jvm-common = {path = "../rust-jvm-common"}
classfile-view = {path = "../classfile-view"}
loading = {path = "../loading"}
libloading = "0.5"
