[package]
name = "slow-interpreter"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
classfile-parser = { path = "../classfile-parser" }
verification = { path = "../verification" }
classfile-view = { path = "../classfile-view" }
jar-manipulation = { path = "../jar-manipulation" }
jvmti-jni-bindings = { path = "../jvmti-jni-bindings" }
threads = { path = "../threads" }
type-safe-proc-macro-utils = { path = "../type-safe-proc-macro-utils" }
sketch-jvm-version-of-utf8 = { path = "../sketch-jvm-version-of-utf8" }
another-jit-vm = { path = "../another-jit-vm" }
another-jit-vm-ir = { path = "../another-jit-vm-ir" }
gc-memory-layout-common = { path = "../gc-memory-layout-common" }
add-only-static-vec = { path = "../add-only-static-vec" }
perf-metrics = { path = "../perf-metrics" }
java5-verifier = { path = "../java5-verifier" }
libffi = { git = 'https://github.com/pirocks/libffi-rs.git', branch = "updated", features = ["system"] }
libloading = { git = 'https://github.com/pirocks/rust_libloading.git' }
crossbeam = { git = "https://github.com/pirocks/crossbeam.git" }
rangemap = { git = "https://github.com/pirocks/rangemap.git" }
runtime-class-stuff = { path = "../runtime-class-stuff" }
vtable = { path = "../vtable" }
interface-vtable = { path = "../interface-vtable" }
metered = "0.8"
serde_yaml = "0.8"
num-traits = "0.2"
num-derive = "0.3"
lazy_static = "1.4"
libc = "0.2"
regex = "1"
va_list = "0.1"
lock_api = "0.4"
parking_lot = "0.12"
thread-priority = "0.2"
nix = "0.23"
errno = "0.2"
num = "0.4"
by_address = "1"
bimap = "0.6"
itertools = "0.10"
closure = "0.3"
wtf8 = "0.1"
memoffset = "0.6"


[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]

[build-dependencies]
bindgen = "0.53.2"