[package]
name = "slow-interpreter"
version = "0.1.0"
authors = ["Francis Nixon <13nixonf@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
rust-jvm-common = { path = "../rust-jvm-common" }
classfile-parser = { path = "../classfile-parser" }
verification = { path = "../verification" }
classfile-view = { path = "../classfile-view" }
jar-manipulation = { path = "../jar-manipulation" }
jvmti-jni-bindings = { path = "../jvmti-jni-bindings" }
threads = { path = "../threads" }
xtask = { path = "../xtask" }
sketch-jvm-version-of-utf8 = { path = "../sketch-jvm-version-of-utf8" }
another-jit-vm = { path = "../another-jit-vm" }
another-jit-vm-ir = { path = "../another-jit-vm-ir" }
gc-memory-layout-common = { path = "../gc-memory-layout-common" }
add-only-static-vec = { path = "../add-only-static-vec" }
perf-metrics = { path = "../perf-metrics" }
java5-verifier = { path = "../java5-verifier" }
stage0 = { path = "../stage0" }
libffi = { version = "3", features = ["system"] }
libloading = { git = 'https://github.com/pirocks/rust_libloading.git' }
nonnull-const = { git = "https://github.com/pirocks/better-nonnull.git", branch = "master" }
runtime-class-stuff = { path = "../runtime-class-stuff" }
vtable = { path = "../vtable" }
interface-vtable = { path = "../interface-vtable" }
method-table = { path = "../method-table" }
inheritance-tree = { path = "../inheritance-tree" }
thread-signal-handler = { path = "../thread-signal-handler" }
rangemap = "1"
num-traits = "0.2"
num-derive = "0.3"
num-integer = "0.1"
lazy_static = "1.4"
libc = "0.2"
regex = "1"
lock_api = "0.4"
parking_lot = "0.12"
nix = { git = "https://github.com/pirocks/nix.git", branch = "master" }
by_address = "1"
bimap = "0.6"
itertools = "0.10"
wtf8 = "0.1"
memoffset = "0.7"


[dependencies.iced-x86]
version = "1.15"
features = ["code_asm"]

[build-dependencies]
bindgen = "0.60"

#[dev-dependencies]
#xtask = { path = "../xtask" }