[package]
name = "stage0-editable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
another-jit-vm = { path = "../another-jit-vm" }
another-jit-vm-ir = { path = "../another-jit-vm-ir" }
rust-jvm-common = { path = "../rust-jvm-common" }