[package]
name = "thread-signal-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { git = "https://github.com/pirocks/nix.git", branch = "master" }
threads = { path = "../threads" }
libc = "0.2"
another-jit-vm = { path = "../another-jit-vm" }
gc-memory-layout-common = { path = "../gc-memory-layout-common" }
nonnull-const = { git = "https://github.com/pirocks/better-nonnull.git", branch = "master" }
